php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49248 undefined reference to `zlib_globals'
Submitted: 2009-08-14 00:07 UTC Modified: 2009-08-17 17:31 UTC
From: e dot ehritt at web dot de Assigned: jani (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.* OS: *
Private report: No CVE-ID: None
 [2009-08-14 00:07 UTC] e dot ehritt at web dot de
Description:
------------
$ export CFLAGS="-march=athlon64 -O3 -pipe -fstack-protector -fstack-protector-all" export EXTENSION_DIR="/home/eddi/opt/php/5.3.0/lib" ./configure --prefix=/home/eddi/opt/php/5.3.0 --mandir=/home/eddi/opt/man --build=x86_64-pc-linux-gnu --with-config-file-path=/home/eddi/opt/conf --with-zend-vm=GOTO --disable-all --with-bz2=shared --with-curl=shared --with-curlwrappers --with-gd=shared --with-gettext=shared --with-iconv=shared --with-openssl=shared --with-regex=shared --with-xmlrpc=shared --with-xsl=shared --with-zlib=shared --enable-bcmath=shared --enable-calendar=shared --enable-ctype=shared --enable-dom=shared --enable-exif=shared --enable-fileinfo=shared --enable-filter=shared --enable-ftp=shared --enable-hash=shared --enable-libxml=shared --enable-pcntl=shared --enable-phar=shared --enable-posix=shared --enable-shmop=shared --enable-simplexml=shared --enable-soap=shared --enable-sockets=shared --enable-sysvmsg=shared --enable-sysvsem=shared --enable-sysvshm=shared --enable-tokenizer=shared --enable-wddx=shared --enable-xml=shared --enable-xmlreader=shared --enable-xmlwriter=shared --enable-zip=shared --enable-sigchild --enable-cgi --disable-short-tags


$ make > /dev/null

/home/eddi/opt/src/php5.3-200908132230/ext/date/php_date.c: In function 'date_format':
/home/eddi/opt/src/php5.3-200908132230/ext/date/php_date.c:1058: warning: incompatible implicit declaration of built-in function 'llabs'
/home/eddi/opt/src/php5.3-200908132230/main/streams/cast.c: In function '_php_stream_cast':
/home/eddi/opt/src/php5.3-200908132230/main/streams/cast.c:222: warning: cast to pointer from integer of different size
/home/eddi/opt/src/php5.3-200908132230/main/streams/cast.c:225: warning: cast to pointer from integer of different size
/home/eddi/opt/src/php5.3-200908132230/Zend/zend_objects.c: In function 'zend_objects_destroy_object':
/home/eddi/opt/src/php5.3-200908132230/Zend/zend_objects.c:95: warning: assignment discards qualifiers from pointer target type
main/.libs/SAPI.o: In function `sapi_send_headers':
SAPI.c:(.text+0x1fca): undefined reference to `zlib_globals'
collect2: ld returned 1 exit status
make: *** [sapi/cgi/php-cgi] Error 1



Reproduce code:
---------------
$ gcc -v

Using built-in specs.
Target: x86_64-pc-linux-gnu
Configured with: /var/tmp/portage/sys-devel/gcc-4.3.2-r3/work/gcc-4.3.2/configure --prefix=/usr --bindir=/usr/x86_64-pc-linux-gnu/gcc-bin/4.3.2 --includedir=/usr/lib/gcc/x86_64-pc-linux-gnu/4.3.2/include --datadir=/usr/share/gcc-data/x86_64-pc-linux-gnu/4.3.2 --mandir=/usr/share/gcc-data/x86_64-pc-linux-gnu/4.3.2/man --infodir=/usr/share/gcc-data/x86_64-pc-linux-gnu/4.3.2/info --with-gxx-include-dir=/usr/lib/gcc/x86_64-pc-linux-gnu/4.3.2/include/g++-v4 --host=x86_64-pc-linux-gnu --build=x86_64-pc-linux-gnu --disable-altivec --disable-fixed-point --enable-nls --without-included-gettext --with-system-zlib --disable-checking --disable-werror --enable-secureplt --disable-multilib --enable-libmudflap --disable-libssp --enable-libgomp --disable-libgcj --enable-languages=c,c++,treelang,fortran --enable-shared --enable-threads=posix --enable-__cxa_atexit --enable-clocale=gnu --with-bugurl=http://bugs.gentoo.org/ --with-pkgversion='Gentoo 4.3.2-r3 p1.6, pie-10.1.5'
Thread model: posix
gcc version 4.3.2 (Gentoo 4.3.2-r3 p1.6, pie-10.1.5)


$ ld -v

GNU ld (GNU Binutils) 2.18




Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-08-16 05:50 UTC] kalle@php.net
Jani, you changed to use ZLIBG in main, but unless thats exported it cannot be used when its built shared. So we need to either export it or just skip this part in main/ if zlib is shared.
 [2009-08-17 11:28 UTC] jani@php.net
Related to fix for bug #48994
 [2009-08-17 13:15 UTC] jani@php.net
And this is 5.* only, HEAD has better output handling.
 [2009-08-17 17:30 UTC] svn@php.net
Automatic comment from SVN on behalf of jani
Revision: http://svn.php.net/viewvc/?view=revision&revision=287423
Log: - Fixed bug #49248 by fixing bug #48994 properly
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 19 22:00:02 2026 UTC