- Fixed bug #49248 by fixing bug #48994 properly